objects/modigie__Modigie__c.object
<CustomObject>
    <description>Custom object to allow Modigie / Zapier / Citrix integration.</description>
    <fields>
        <fullName>modigie__Accuracy_Match_Alternate_Number1__c</fullName>
        <label>Accuracy Match (Alt 1)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Accuracy_Match_Alternate_Number2__c</fullName>
        <label>Accuracy Match (Alt 2)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Accuracy_Match_Modigie_Validated_Number__c</fullName>
        <label>Accuracy Match (Modigie Number)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Accuracy_Match_Other_Phone__c</fullName>
        <label>Accuracy Match (Other Phone)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Accuracy_Match_Phone__c</fullName>
        <label>Accuracy Match (Phone)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Best_Time_to_Call_Alternate_Number1__c</fullName>
        <label>Overall Best Time to Call Alt 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Best_Time_to_Call_Alternate_Number2__c</fullName>
        <label>Overall Best Time to Call Alt 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Best_Time_to_Call_Phone_Other_Phone__c</fullName>
        <label>Overall Best Time to Call (Other Phone)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Best_Time_to_Call_Phone__c</fullName>
        <label>Overall Best Time to Call (Phone)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Best_Time_to_Call_Validated_Number__c</fullName>
        <label>Overall Best Time to Call Validated Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Best_Time_to_Call__c</fullName>
        <label>Overall Best Time to Call</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Best_time_to_call_friday__c</fullName>
        <label>Best time to call (Friday)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Best_time_to_call_thursday__c</fullName>
        <label>Best time to call (Thursday)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Best_time_to_call_timezone__c</fullName>
        <label>Best time to call (Timezone)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Best_time_to_call_tuesday__c</fullName>
        <label>Best time to call (Tuesday)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Best_time_to_call_wednesday__c</fullName>
        <label>Best time to call (Wednesday)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Business_Email_1__c</fullName>
        <label>Business Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>modigie__Business_Email_2__c</fullName>
        <label>Business Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>modigie__Business_Email_3__c</fullName>
        <label>Business Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>modigie__Campaign_Id_GetLinkedin__c</fullName>
        <label>Get LinkedIn Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Campaign_Id_GetMobileNumber__c</fullName>
        <label>Get Modigie Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Campaign_Id_GetPhoneInsight__c</fullName>
        <label>Get Phone Insights Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Campaign_Id_VerifyEmployer__c</fullName>
        <label>Verify Employer Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Carrier_Name_Mobile__c</fullName>
        <label>Mobile Carrier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Carrier_Name_Other_Phone__c</fullName>
        <label>Other Phone Carrier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Carrier_Name_Phone__c</fullName>
        <label>Phone Carrier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Company_Name_Matches_Public_Records__c</fullName>
        <label>Company Name Matches Public Records</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Company_Name_Matches_Records_Get_Modigie__c</fullName>
        <label>Company Name Matches Public Records</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Modigie</relationshipLabel>
        <relationshipName>Modigie</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>modigie__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Current_Country_Get_Modigie__c</fullName>
        <label>Current Location Get Modigie</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Current_Employer_Get_Modigie__c</fullName>
        <label>Current Employer Get Modigie</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Current_Employer__c</fullName>
        <label>Current Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Current_Title_Get_Modigie__c</fullName>
        <label>Current Title Get Modigie</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Current_Title__c</fullName>
        <label>Current Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Current__c</fullName>
        <label>Current Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Currrent_Employer_Validation_Date__c</fullName>
        <label>Validation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>modigie__Date_Last_Updated__c</fullName>
        <description>Date field that hold last sync with modigie API</description>
        <label>Validation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>modigie__Day_of_Week_Detail_Alternate_Number1__c</fullName>
        <label>Day of Week Detail Alt 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Day_of_Week_Detail_Alternate_Number2__c</fullName>
        <label>Day of Week Detail Alt 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Day_of_Week_Detail_Modigie_Val_Number__c</fullName>
        <label>Day of Week Detail Modigie Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Day_of_Week_Detail_Other_Phone__c</fullName>
        <label>Day of Week Detail Other Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Day_of_Week_Detail_Phone__c</fullName>
        <label>Day of Week Detail Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Day_of_Week_Detail__c</fullName>
        <label>Day of Week Detail Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Employment_Ends_Get_Modigie__c</fullName>
        <label>Employment changed Get Modigie</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Employment_Ends_Verify_Employer__c</fullName>
        <label>Employment changed Verify Employer</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Formatted_Mobile_Number__c</fullName>
        <label>Formatted Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Formatted_Other_Phone_Number__c</fullName>
        <label>Formatted Other Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Formatted_Phone_Number__c</fullName>
        <label>Formatted Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Get_LinkedIn_Job_Status__c</fullName>
        <label>Get LinkedIn Job Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Linkedin_Campaign_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Get LinkedIn Campaign User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Modigie1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Mobile_Campaign_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Get Modigie Campaign User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Modigie2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Modigie_Id__c</fullName>
        <label>Get Modigie ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Modigie_Job_Source__c</fullName>
        <label>Get Modigie Job Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Modigie_Job_Status__c</fullName>
        <label>Get Modigie Job Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Number_Intelligence_Date_Alt1__c</fullName>
        <label>Validation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Number_Intelligence_Date_Alt2__c</fullName>
        <label>Validation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Number_Intelligence_Date_Other_Phone__c</fullName>
        <label>Validation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Number_Intelligence_Date_Phone__c</fullName>
        <label>Validation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Number_Intelligence_Date_Val_Number__c</fullName>
        <label>Validation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Number_Intelligence_Date__c</fullName>
        <label>Validation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Phone_Insight_Campaign_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Get Phone Insights Campaign User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Modigie3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Phone_Intelligence_Job_Id_Alternate1__c</fullName>
        <label>Get Phone Insights Alt 1 Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Phone_Intelligence_Job_Id_Alternate2__c</fullName>
        <label>Get Phone Insights Alt 2 Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Phone_Intelligence_Job_Id_OtherPhone__c</fullName>
        <label>Get Phone Insights Other Phone Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Phone_Intelligence_Job_Id_Phone__c</fullName>
        <label>Get Phone Insights Phone Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Phone_Intelligence_Job_Id_Val_Number__c</fullName>
        <label>Get Phone Insights Val Number Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Phone_Intelligence_Job_Id__c</fullName>
        <label>Get Phone Insights Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Phone_Intelligence_Job_Status_Alt1__c</fullName>
        <label>Get Phone Insights Alt 1 Job Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Phone_Intelligence_Job_Status_Alt2__c</fullName>
        <label>Get Phone Insights Alt 2 Job Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Phone_Intelligence_Job_Status_OPhone__c</fullName>
        <label>Get Phone Insights OtherPhone Job Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Phone_Intelligence_Job_Status_Phone__c</fullName>
        <label>Get Phone Insights Phone Job Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Phone_Intelligence_Job_Status_ValNum__c</fullName>
        <label>Get Phone Insights Val Number Job Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Phone_Intelligence_Job_Status__c</fullName>
        <label>Get Phone Insights Job Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__JOB_ID__c</fullName>
        <formula>modigie__Jobid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Job_end__c</fullName>
        <label>Job End</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>modigie__Job_start__c</fullName>
        <label>Job Start</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>modigie__Jobid__c</fullName>
        <label>Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Modigie</relationshipLabel>
        <relationshipName>Modigie</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>modigie__Line_Activity_Alternate1__c</fullName>
        <label>Line Activity Alt 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Line_Activity_Alternate2__c</fullName>
        <label>Line Activity Alt 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Line_Activity_Modigie_Validated_Number__c</fullName>
        <label>Line Activity Modigie Validated Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Line_Activity_Other_Phone__c</fullName>
        <label>Line Activity Other Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Line_Activity_Phone__c</fullName>
        <label>Line Activity Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Line_Activity__c</fullName>
        <label>Line Activity Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__LinkedIn_Url_Get_Mobile_Number__c</fullName>
        <label>Get Modigie LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>modigie__LinkedIn_Url_Verify_Employer__c</fullName>
        <label>Verify Employer LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>modigie__Linkedin_Job_Id__c</fullName>
        <label>Get LinkedIn Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Linkedin_Status__c</fullName>
        <label>Get LinkedIn Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>In process</fullName>
                </value>
                <value>
                    <fullName>Not started</fullName>
                    <default>true</default>
                    <label>Not started</label>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>modigie__Linkedin_URL__c</fullName>
        <description>I stores the Linked URL requested through &quot;GET LINKEDIN&quot;</description>
        <label>Modigie LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>modigie__Linkedin_Validation_Date__c</fullName>
        <label>Validation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>modigie__Locale_Overall_Best_Time_to_Call_Mobile__c</fullName>
        <label>Overall Best Time to Call(Locale Mobile)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Locale_Overall_Best_Time_to_Call_O__c</fullName>
        <label>Overall Best Time to Call (Locale Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Locale_Overall_Best_Time_to_Call_Phone__c</fullName>
        <label>Overall Best Time to Call (Locale Phone)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Mobile_2__c</fullName>
        <label>Modigie Alternate Mobile Number 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Mobile_3__c</fullName>
        <label>Modigie Alternate Mobile Number 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Mobile_Phone_Formula__c</fullName>
        <formula>modigie__Contact__r.MobilePhone</formula>
        <label>Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Mobile__c</fullName>
        <label>Modigie Mobile Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Modigie_Validated_Mobile_Contact_Number__c</fullName>
        <formula>modigie__Mobile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modigie Mobile Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Name_Get_LinkedIn__c</fullName>
        <label>Get LinkedIn Support Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Name_Get_Mobile_Number__c</fullName>
        <label>Get Modigie Support Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Name_Get_Phone_Insights_Mobile__c</fullName>
        <label>Get Phone Insights (Mobile) Support Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Name_Get_Phone_Insights_Other_Phone__c</fullName>
        <label>Phone Insights(Other Phone) Support Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Name_Get_Phone_Insights_Phone__c</fullName>
        <label>Get Phone Insights (Phone) Support Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Name_Verify_Employer__c</fullName>
        <label>Verify Employer Support Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Parent_Id__c</fullName>
        <label>Parent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Phone_Insights_User_Locale_Mobile__c</fullName>
        <label>Phone Insights User Locale Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Phone_Insights_User_Locale_Other_Phone__c</fullName>
        <label>Phone Insights User Locale Other Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Phone_Insights_User_Locale_Phone__c</fullName>
        <label>Phone Insights User Locale Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Phone_Intelligence_Status_Alt_Number1__c</fullName>
        <defaultValue>&quot;Not started&quot;</defaultValue>
        <label>Get Phone Insights Alt 1 Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Phone_Intelligence_Status_Alt_Number2__c</fullName>
        <defaultValue>&quot;Not started&quot;</defaultValue>
        <label>Get Phone Insights Alt 2 Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Phone_Intelligence_Status_Modigie_Number__c</fullName>
        <defaultValue>&quot;Not started&quot;</defaultValue>
        <label>Get Phone Insights Modigie Number Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Phone_Intelligence_Status_Other_Phone__c</fullName>
        <defaultValue>&quot;Not started&quot;</defaultValue>
        <label>Get Phone Insights Other Phone Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Phone_Intelligence_Status_Phone__c</fullName>
        <defaultValue>&quot;Not started&quot;</defaultValue>
        <label>Get Phone Insights Phone Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Phone_Intelligence_Status__c</fullName>
        <defaultValue>&quot;Not started&quot;</defaultValue>
        <label>Get Phone Insights Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Phone_Name_Match__c</fullName>
        <label>Accuracy Match (Mobile)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Phone_Type_Alternate_Number1__c</fullName>
        <label>Alt 1 Number Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Phone_Type_Alternate_Number2__c</fullName>
        <label>Alt 2 Number Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Phone_Type_Modigie_Validated_Number__c</fullName>
        <label>Modigie Validated Phone Number Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Phone_Type_Other_Phone__c</fullName>
        <label>Other Phone Number Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Phone_Type_Phone__c</fullName>
        <label>Phone Number Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Phone_Type__c</fullName>
        <label>Mobile Number Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Private_Email_1__c</fullName>
        <label>Private Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>modigie__Private_Email_2__c</fullName>
        <label>Private Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>modigie__Response_time__c</fullName>
        <formula>TEXT(modigie__Job_end__c -  modigie__Job_start__c) +  IF(ISBLANK(TEXT(modigie__Job_end__c -  modigie__Job_start__c)), &apos;&apos;, &apos; ms&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__StatusFormula__c</fullName>
        <formula>CASE(modigie__Status__c,
  &quot;In process&quot;, &quot;In process&quot;,
  &quot;Unvalidated&quot;, &quot;Requires More Research&quot;,
  &quot;In Escalation&quot;, &quot;In Escalation&quot;,
  &quot;Validated&quot;, &quot;Validated&quot;,
  &quot;Not Available&quot;, &quot;Not Available&quot;,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Status__c</fullName>
        <label>Get Modigie Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In process</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>Not started</fullName>
                    <default>true</default>
                    <label>Not started</label>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>In Escalation</fullName>
                    <isActive>false</isActive>
                    <label>In Escalation</label>
                </value>
                <value>
                    <fullName>Unvalidated</fullName>
                    <isActive>false</isActive>
                    <label>Requires More Research</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>modigie__Street_Address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__User_GetLinkedin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Get LinkedIn User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Modigie5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>modigie__User_GetModigieMobile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Get Modigie User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Modigie</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>modigie__User_PhoneInsights__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Get Phone Insights User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Modigie7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>modigie__User_VerifyEmployer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verify Employer User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Modigie6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>modigie__Validate_Employer_Job_Id__c</fullName>
        <label>Verify Employer Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Validate_Employer_Job_Status__c</fullName>
        <label>Verify Employer Job Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Validate_Employer_Status__c</fullName>
        <defaultValue>&quot;Not started&quot;</defaultValue>
        <label>Verify Employer Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Validation_Date_Alternate_Number1__c</fullName>
        <label>Validation Date (Alt 1)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>modigie__Validation_Date_Alternate_Number2__c</fullName>
        <label>Validation Date (Alt 2)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>modigie__Validation_Date_Get_LinkedIn__c</fullName>
        <label>Validation Date (Get LinkedIn)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>modigie__Validation_Date_Get_Mobile_Number__c</fullName>
        <label>Validation Date (Get Modigie)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>modigie__Validation_Date_Mobile__c</fullName>
        <label>Validation Date (Mobile)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>modigie__Validation_Date_Modigie_Val_Phone_Number__c</fullName>
        <label>Validation Date (Modigie Number)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>modigie__Validation_Date_Other_Phone__c</fullName>
        <label>Validation Date (Other Phone)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>modigie__Validation_Date_Phone__c</fullName>
        <label>Validation Date (Phone)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>modigie__Validation_Date_Verify_Employer__c</fullName>
        <label>Validation Date (Verify Employer)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>modigie__Validation_Key__c</fullName>
        <label>Validation Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Verified_Phone_Get_Phone_Insights_Alt1__c</fullName>
        <label>Validated Alt 1 Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Verified_Phone_Get_Phone_Insights_Alt2__c</fullName>
        <label>Validated Alt 2 Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Verified_Phone_Get_Phone_Insights_OPhone__c</fullName>
        <label>Validated Other Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Verified_Phone_Get_Phone_Insights_Phone__c</fullName>
        <label>Validated Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Verified_Phone_Get_Phone_Insights_ValNum__c</fullName>
        <label>Validated Modigie Mobile Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Verified_Phone_Get_Phone_Insights__c</fullName>
        <label>Validated Mobile Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Verify_Employer_Campaign_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verify Employer Campaign User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Modigie4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>modigie__Zip__c</fullName>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Modigie</label>
    <listViews>
        <fullName>modigie__All</fullName>
        <columns>NAME</columns>
        <columns>modigie__Lead__c</columns>
        <columns>modigie__Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>modigie__Modigie_Validated_Mobile_Contact_Number__c</columns>
        <columns>modigie__Status__c</columns>
        <columns>modigie__Mobile_2__c</columns>
        <columns>modigie__Line_Activity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MDG-{000000}</displayFormat>
        <label>Modigie</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Modigie</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>